Lang: Translate ru_RU Fix: Global function rename from 'info' to 'out'

--- a/customcmd/locale/lang/en.po
+++ b/customcmd/locale/lang/en.po
@@ -42,8 +42,10 @@ Yes
 No
 ~data.locale.error.po.nolang
 No such language: '{lang}'!
-~data.locale.trigger.reload
+~data.locale.trigger.reload@debug
 Locale reloaded!
+~data.locale.trigger.reload
+@user.ue.wait
 ~user.ue.wait
 Wait, please...
 ~exec.sys.cmd.error
